--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <h1>Поиск по адресам</h1>
 <h2>Без jquery плагинов</h2>
 <div>
-    <input type="text" name="search" id="search_input">
+    <input type="text" name="search" id="search_input" placeholder="Минимум 3 символа">
     <ul id="search_result"></ul>
 </div>
 <h2>С плагином</h2>
 <div>
     <select name="search2" id="search_input2"></select>
 </div>
+<div id="search_rexult_info"></div>
 
 <!--script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script-->
 <script src="http://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
