--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <h2>Без jquery плагинов</h2>
 <div>
     <input type="text" name="search" id="search_input" placeholder="Минимум 3 символа">
-    <ul id="search_result"></ul>
+    <div style="position: absolute; left: 50%; z-index:1;">
+        <div style="position: relative; left: -50%;">
+            <ul id="search_result"></ul>
+        </div>
+    </div>
 </div>
 <h2>С плагином</h2>
 <div>
